# farsign

./: .gitignore  Cargo.toml  Makefile  README.md  header.css  header.html  nucleo.cfg  one.md  openocd.gdb
.cargo/: config
docs/: embedded-rust-with-lorawan-and-epaper-1.html  embedded-rust-with-lorawan-and-epaper-2.html  embedded-rust-with-lorawan-and-epaper-3.html  embedded-rust-with-lorawan-and-epaper-4.html
docs/media/: first_morse_code.webm  statemachine.dot
media/: epaper_startup.webm  off_on.webm
posts/: embedded-rust-with-lorawan-and-epaper-1.md  embedded-rust-with-lorawan-and-epaper-2.md  embedded-rust-with-lorawan-and-epaper-3.md  embedded-rust-with-lorawan-and-epaper-4.md  embedded-rust-with-lorawan-and-epaper-5.md
src/: epaper.rs  lib.rs  machine.rs  main.rs  morse.rs  radio.rs  status.rs
