[package]
name = "farsign"
version = "0.0.1"
description = ""
authors = ["Michael Beaumont <mjboamail@gmail.com>"]
keywords = []
categories = ["embedded", "no-std"]
edition = "2018"
readme = "README.md"
license = "MIT"

[dependencies]
embedded-graphics = "^0.6.1"
embedded-hal = "^0.2.4"
epd-waveshare = { version= "0.4.0" }
stm32l0xx-hal = {version = "0.6.2", features = ["stm32l0x2", "rt"]}
stm32l0 = "*"
cortex-m = "0.6.3"
cortex-m-rt = "0.6.13"
cortex-m-semihosting = "0.3.5"
panic-semihosting = "*"
cortex-m-rtic = "*"
void = { version = "*", default-features = false }

[profile.release]
codegen-units = 1
debug = true
lto = true

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
