[package]
name = "farsign"
version = "0.0.1"
description = ""
authors = ["Michael Beaumont <mjboamail@gmail.com>"]
keywords = []
categories = ["embedded", "no-std"]
edition = "2018"
readme = "README.md"
license = "MIT"

[dependencies]
embedded-graphics = "^0.7.1"
embedded-hal = "^0.2.4"
embedded-time="0.12.1"
epd-waveshare = { version= "0.5.0" }
stm32l0xx-hal = { version = "0.9.0", features = ["stm32l0x2", "rt",  "mcu-STM32L072CZYx"] }
stm32l0 = { version = "^0.13.0", features = ["stm32l0x2", "rt"] }
cortex-m = "0.7.5"
cortex-m-rt = "0.6.13"
cortex-m-semihosting = "0.5.0"
panic-semihosting = "*"
cortex-m-rtic = "^1.1.0"

[profile.release]
codegen-units = 1
debug = true
lto = true

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
